Styled up product display to look more professional, and not looking like generic bootstrap. I tried to use button elements as color choice, it is not responding well. I will have to change that later. for now, It works fine as a placeholder for the color choices.  committing changes, and moving on to fix the mobile filter menu spacing.

--- a/src/scss/components/productSearch/childComp/productDisplay.scss
+++ b/src/scss/components/productSearch/childComp/productDisplay.scss
@@ -5,20 +5,47 @@
         margin: 0;
         padding: 0;
     }
-}
-.displayContainer{
-    grid-gap: .5rem;
-    margin: 0;
-    .displayCard{
-        padding: 0;
-        @media only screen and (max-width: 767px) {
-            min-width: 40%;
-        }
-        @media only screen and (max-width: 991px) {
-            max-width: 9.6rem;
-        }
-        @media only screen and (min-width: 992px) {
-            max-width: 24%;
+    .displayContainer{
+        grid-gap: .5rem;
+        margin: 0;
+        .displayCard{
+            padding: 0;
+            border: none;
+            @media only screen and (max-width: 767px) {
+                min-width: 40%;
+            }
+            @media only screen and (max-width: 991px) {
+                max-width: 9.6rem;
+            }
+            @media only screen and (min-width: 992px) {
+                max-width: 24%;
+            }
+            .card-body{
+                padding: .5rem 0 0 0;
+                .card-title{
+                    margin: 0;
+                    font-size: 1rem;
+                    font-weight: 400;
+                    color: rgb(54, 190, 177);
+                }
+                .card-text{
+                    margin: 0;
+                    font-size: .8rem;
+                }
+            }
+            .colorBtnContainer{
+                display: flex ;
+                flex-flow: row;
+                justify-content: flex-start;
+                button{
+                    border-radius: 50%;
+                    width: .5rem;
+                    height: 1.5rem;
+                    &:hover{
+                        border: 2px solid rgb(54, 190, 177);
+                    }
+                }
+            }
         }
     }
 }
